# ImageDePHI

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  Redacted_2024-09-17_12-17-28_manifest.csv  base_rules.yaml  gui.py  imagedephi.py  logging.conf  pyoxidizer.bzl  pyproject.toml  requirements.txt  setup.py  tox.ini  yamllint_config.yaml
.github/: zip_and_upload_package.sh
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
client/: .env.development  .eslintrc.cjs  .gitignore  .yarnrc.yml  README.md  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.vue  HomePage.vue  main.ts
client/src/api/: rest.ts
client/src/components/: FIleBrowser.vue  FileBrowser.vue  ImageDataDisplay.vue  ImageDataTable.vue  ImageList.vue  InfiniteScroller.vue  MenuSteps.vue
client/src/store/: directoryStore.ts  imageStore.ts  redactionStore.ts  rulesStore.ts  types.ts
docs/: demo.md  development.md
imagedephi/: __init__.py  __main__.py  async_utils.py  base_rules.yaml  command_file.py  demo_files.csv  gui.py  main.py  minimum_rules.yaml  modify_dates_rules.yaml  pydantic_rules.py  redact.py  rules.py
imagedephi/client/: README.md  package.json
imagedephi/client/src/: App.vue
imagedephi/client/src/api/: rest.ts
imagedephi/gui/: __init__.py  app.py
imagedephi/gui/api/: __init__.py  api.py
imagedephi/gui/utils/: constants.py  directory.py  image.py
imagedephi/js/: redaction.js
imagedephi/models/: rules.py  rules_models.py
imagedephi/redact/: __init__.py  build_redaction_plan.py  dicom.py  redact.py  redaction_plan.py  svs.py  tiff.py
imagedephi/rules/: __init__.py  rule.py  ruleset.py  svs.py  tiff.py
imagedephi/templates/: BaseSelectorWidget.html.j2  DirectorySelector.html.j2  HomePage.html.j2  InputSelectorWidget.html.j2  InputStep.html.j2  OutputSelectorWidget.html.j2  OutputStep.html.j2  SelectedDirectory.html.j2  SidebarInputStep.html.j2  SidebarOutputStep.html.j2  SidebarRulesetStep.html.j2  SidebarSteps.html.j2
imagedephi/utils/: cli.py  dicom.py  image.py  logger.py  network.py  os.py  progress_log.py  tiff.py
stubs/tifftools/: __init__.pyi  constants.pyi  exceptions.pyi  tifftools.pyi
templates/: DirectorySelector.html.j2  sample.html.j2
tests/: conftest.py  test_async_utils.py  test_e2e.py  test_gui.py  test_redact.py  test_redact_images.py  test_utils_cli.py  test_utils_network.py  test_utils_os.py
tests/data/input/dcm/: test_dcm_image.dcm
tests/data/input/svs/: test_svs_image_blank.svs
tests/data/input/tiff/: secret_metadata.tiff  test_image.tif
tests/data/rules/: example_user_rules.yml
tests/override_rule_sets/: example_user_rules.yaml  example_user_rules.yml
tests/override_rulesets/: example_user_rules.yaml
