[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ImageDePHI"
requires-python = ">=3.11"
dependencies = [
    "click<8.1.4",
    "tifftools",
    "fastapi",
    "python-multipart",
    "Jinja2",
    "hypercorn",
    "pyyaml",
    "Pillow",
    "websockets",
]
dynamic = ["version"]

[project.scripts]
imagedephi = "imagedephi.main:imagedephi"

[tool.hatch.build]
only-include = [
  "imagedephi",
]

[tool.hatch.version]
source = "vcs"

[tool.djlint]
extension = "html.j2"
profile = "jinja"
indent = 2

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = [
    "build/",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --showlocals --verbose"
testpaths = ["tests"]

[tool.pyright]
stubPath = "stubs"
