[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ImageDePHI"
requires-python = ">=3.11"
dependencies = [
    "click<8.1.4",
    "tifftools",
    "fastapi",
    "python-multipart",
    "Jinja2",
    "hypercorn",
    "pyyaml",
    "Pillow",
    "websockets",
]
dynamic = ["version"]

[project.scripts]
imagedephi = "imagedephi.main:imagedephi"

[tool.hatch.build]
only-include = [
  "imagedephi",
]
artifacts = [
  "imagedephi/web_static",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "imagedephi/web_static/index.html",
]
# Allow development installs even if the client build is broken
optional-editable-build = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "client"
build_cmd = "build"
# Will only rebuild if source_dir was modified after build_dir
source_dir = "client"
build_dir = "imagedephi/web_static"

[tool.djlint]
extension = "html.j2"
profile = "jinja"
indent = 2

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = [
    "build/",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --showlocals --verbose"
testpaths = ["tests"]

[tool.pyright]
stubPath = "stubs"
